--- a/Frontend/Sketches/App.html
+++ b/Frontend/Sketches/App.html
@@ -9,30 +9,32 @@
 
 <body>
     <h1 class="text-center">MemoMe</h1>
-    <div class="list-group">
-        <a href="#" class="list-group-item list-group-item-success flex-column align-items-start m-2">
-          <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">DAS IST EINE TODO</h5>
-            <div>
-                <button type="button" class="btn btn-success">✓</button>
-                <button type="button" class="btn btn-danger">X</button>
+
+    <div class="row">
+        <div class="card m-2" style="width: 18rem;">
+            <img class="card-img-top" src="https://www.spiesskuechenundwohnen.de/bilder/unser-kuechenstudio_1280x560.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Küche</h5>
+              <div>
+                  <div class="row">
+                    <a href="#" class="btn btn-success">Liste öffnen</a>
+                    <a href="#" class="btn btn-danger">Liste bearbeiten</a>
+                  </div>
+              </div>
             </div>
-          </div>
-          <p class="mb-3">Beschreibt was man in der Todo machen soll.</p>
-          <small>3 days to go</small>
-        </a>
-        <a href="#" class="list-group-item list-group-item-primary flex-column align-items-start m-2 ">
-          <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">DAS IST EINE TODO</h5>
-            <div>
-                <button type="button" class="btn btn-success">✓</button>
-                <button type="button" class="btn btn-danger">X</button>
+        </div>
+    
+        <div class="card m-2" style="width: 18rem;">
+            <img class="card-img-top" src="https://www.spiesskuechenundwohnen.de/bilder/unser-kuechenstudio_1280x560.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Küche</h5>
+              <div>
+                <a href="#" class="btn btn-success">Liste öffnen</a>
+                <a href="#" class="btn btn-danger">Liste bearbeiten</a>
+              </div>
             </div>
-          </div>
-          <p class="mb-3">Beschreibt was man in der Todo machen soll.</p>
-          <small class="text-muted">3 days to go</small>
-        </a>
-      </div>
+        </div>
+    </div>
     <!-- Bootstrap JS, this comes after everything else -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
