--- a/Frontend/Sketches/App.html
+++ b/Frontend/Sketches/App.html
@@ -29,8 +29,10 @@
             <div class="card-body">
               <h5 class="card-title">Küche</h5>
               <div>
-                <a href="#" class="btn btn-success">Liste öffnen</a>
-                <a href="#" class="btn btn-danger">Liste bearbeiten</a>
+                  <div class="row">
+                    <a href="#" class="btn btn-success">Liste öffnen</a>
+                    <a href="#" class="btn btn-danger">Liste bearbeiten</a>
+                  </div>
               </div>
             </div>
         </div>
