--- a/Frontend/Sketches/App.html
+++ b/Frontend/Sketches/App.html
@@ -17,8 +17,8 @@
               <h5 class="card-title">Küche</h5>
               <div>
                   <div class="row">
-                    <a href="#" class="btn btn-success">Liste öffnen</a>
-                    <a href="#" class="btn btn-danger">Liste bearbeiten</a>
+                    <a href="./Liste.html" class="btn btn-success">Liste öffnen</a>
+                    <a href="./Liste.html" class="btn btn-danger">Liste bearbeiten</a>
                   </div>
               </div>
             </div>
@@ -30,8 +30,8 @@
               <h5 class="card-title">Küche</h5>
               <div>
                   <div class="row">
-                    <a href="#" class="btn btn-success">Liste öffnen</a>
-                    <a href="#" class="btn btn-danger">Liste bearbeiten</a>
+                    <a href="./Liste.html" class="btn btn-success">Liste öffnen</a>
+                    <a href="./Liste.html" class="btn btn-danger">Liste bearbeiten</a>
                   </div>
               </div>
             </div>
