--- a/Frontend/Sketches/Liste.html
+++ b/Frontend/Sketches/Liste.html
@@ -44,6 +44,8 @@
             <small>3 days to go</small>
         </a>
     </div>
+
+    <button type="button" href="./App.html" class="btn btn-primary">Zurück</button>
     <!-- Bootstrap JS, this comes after everything else -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
