--- a/Frontend/Sketches/Liste.html
+++ b/Frontend/Sketches/Liste.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta charset="utf-8"/>
     <!-- Bootstrap CSS, this comes before everything else -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -14,6 +15,7 @@
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">DAS IST EINE TODO</h5>
             <div>
+                <button type="button" class="btn btn-primary">EDIT</button>
                 <button type="button" class="btn btn-success">✓</button>
                 <button type="button" class="btn btn-danger">X</button>
             </div>
@@ -25,6 +27,7 @@
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">DAS IST EINE TODO</h5>
             <div>
+                <button type="button" class="btn btn-primary">EDIT</button>
                 <button type="button" class="btn btn-success">✓</button>
                 <button type="button" class="btn btn-danger">X</button>
             </div>
@@ -32,20 +35,9 @@
           <p class="mb-3">Beschreibt was man in der Todo machen soll.</p>
           <small class="text-muted">3 days to go</small>
         </a>
-        <a href="#" class="list-group-item list-group-item-success flex-column align-items-start m-2">
-            <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1">DAS IST EINE TODO</h5>
-              <div>
-                  <button type="button" class="btn btn-success">✓</button>
-                  <button type="button" class="btn btn-danger">X</button>
-              </div>
-            </div>
-            <p class="mb-3">Beschreibt was man in der Todo machen soll.</p>
-            <small>3 days to go</small>
-        </a>
     </div>
 
-    <button type="button" href="./App.html" class="btn btn-primary">Zurück</button>
+    <button type="button" href="./App.html" class="btn btn-primary m-2">Zurück</button>
     <!-- Bootstrap JS, this comes after everything else -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
