--- a/Frontend/Sketches/App.html
+++ b/Frontend/Sketches/App.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta charset="utf-8"/>
     <!-- Bootstrap CSS, this comes before everything else -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
