Added Margin to Buttons on List page

--- a/Frontend/Sketches/App.html
+++ b/Frontend/Sketches/App.html
@@ -18,8 +18,8 @@
               <h5 class="card-title">Küche</h5>
               <div>
                   <div class="row">
-                    <a href="./Liste.html" class="btn btn-success">Liste öffnen</a>
-                    <a href="./Liste.html" class="btn btn-danger">Liste bearbeiten</a>
+                    <a href="./Liste.html" class="btn btn-success m-2">Liste öffnen</a>
+                    <a href="./Liste.html" class="btn btn-danger m-2" >Liste bearbeiten</a>
                   </div>
               </div>
             </div>
@@ -31,8 +31,8 @@
               <h5 class="card-title">Küche</h5>
               <div>
                   <div class="row">
-                    <a href="./Liste.html" class="btn btn-success">Liste öffnen</a>
-                    <a href="./Liste.html" class="btn btn-danger">Liste bearbeiten</a>
+                    <a href="./Liste.html" class="btn btn-success m-2">Liste öffnen</a>
+                    <a href="./Liste.html" class="btn btn-danger m-2">Liste bearbeiten</a>
                   </div>
               </div>
             </div>
