--- a/Frontend/Sketches/App.html
+++ b/Frontend/Sketches/App.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <div class="container">
     <h1 class="text-center">MemoMe</h1>
 
     <div class="row">
@@ -36,6 +37,7 @@
             </div>
         </div>
     </div>
+  </div>
     <!-- Bootstrap JS, this comes after everything else -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
