--- a/Frontend/Sketches/Liste.html
+++ b/Frontend/Sketches/Liste.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <div class="container">
     <h1>LISTENNAME</h1>
     <div class="list-group">
         <a href="#" class="list-group-item list-group-item-success flex-column align-items-start m-2">
@@ -38,6 +39,9 @@
     </div>
 
     <button type="button" href="./App.html" class="btn btn-primary m-2">Zurück</button>
+
+  </div>
+
     <!-- Bootstrap JS, this comes after everything else -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
