--- a/Frontend/Sketches/Liste.html
+++ b/Frontend/Sketches/Liste.html
@@ -10,9 +10,9 @@
 
 <body>
   <div class="container">
-    <h1>LISTENNAME</h1>
+    <h1 class="pb-2"><strong>LISTENNAME</strong></h1>
     <div class="list-group">
-        <a href="#" class="list-group-item list-group-item-success flex-column align-items-start m-2">
+        <a href="#" class="list-group-item list-group-item-success flex-column align-items-start m-1">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">DAS IST EINE TODO</h5>
             <div>
@@ -36,7 +36,7 @@
           <p class="mb-3">Beschreibt was man in der Todo machen soll.</p>
           <small class="text-muted">Expires in 3 days</small>
         </a>
-        <a href="#" class="list-group-item list-group-item-primary flex-column align-items-start m-2 ">
+        <a href="#" class="list-group-item list-group-item-primary flex-column align-items-start m-1 ">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">DAS IST EINE TODO</h5>
             <div>
@@ -62,7 +62,7 @@
         </a>
     </div>
 
-    <button type="button" href="./App.html" class="btn btn-primary m-2">Zurück</button>
+    <a type="button" href="./App.html" class="btn btn-primary m-1">Zurück</a>
 
   </div>
 
