--- a/Frontend/Sketches/App.html
+++ b/Frontend/Sketches/App.html
@@ -6,6 +6,8 @@
     <!-- Bootstrap CSS, this comes before everything else -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <!-- Custom CSS -->
+    <link href="./App.css" rel="stylesheet">
 </head>
 
 <body>
@@ -17,27 +19,19 @@
             <img class="card-img-top" src="https://www.spiesskuechenundwohnen.de/bilder/unser-kuechenstudio_1280x560.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Küche</h5>
-              <div>
-                  <div class="row">
-                    <a href="./Liste.html" class="btn btn-success">Liste öffnen</a>
-                    <a href="./Liste.html" class="btn btn-danger">Liste bearbeiten</a>
-                  </div>
-              </div>
+                <a href="./Liste.html" class="btn btn-success edit-buttons">Liste öffnen</a>
+                <a href="./Liste.html" class="btn btn-danger edit-buttons">Liste bearbeiten</a>
             </div>
         </div>
     
         <div class="card m-2" style="width: 18rem;">
-            <img class="card-img-top" src="https://www.spiesskuechenundwohnen.de/bilder/unser-kuechenstudio_1280x560.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Küche</h5>
-              <div>
-                  <div class="row">
-                    <a href="./Liste.html" class="btn btn-success">Liste öffnen</a>
-                    <a href="./Liste.html" class="btn btn-danger">Liste bearbeiten</a>
-                  </div>
-              </div>
-            </div>
-        </div>
+          <img class="card-img-top" src="https://www.spiesskuechenundwohnen.de/bilder/unser-kuechenstudio_1280x560.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Küche</h5>
+              <a href="./Liste.html" class="btn btn-success edit-buttons">Liste öffnen</a>
+              <a href="./Liste.html" class="btn btn-danger edit-buttons">Liste bearbeiten</a>
+          </div>
+      </div>
     </div>
   </div>
     <!-- Bootstrap JS, this comes after everything else -->
