--- a/Frontend/Sketches/Liste.html
+++ b/Frontend/Sketches/Liste.html
@@ -10,9 +10,9 @@
 
 <body>
   <div class="container">
-    <h1 class="pb-2"><strong>LISTENNAME</strong></h1>
+    <h1 class="pb-1"><strong>LISTENNAME</strong></h1>
     <div class="list-group">
-        <a href="#" class="list-group-item list-group-item-success flex-column align-items-start m-1">
+        <a href="#" class="list-group-item list-group-item-primary flex-column align-items-start m-1">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">DAS IST EINE TODO</h5>
             <div>
@@ -36,6 +36,32 @@
           <p class="mb-3">Beschreibt was man in der Todo machen soll.</p>
           <small class="text-muted">Expires in 3 days</small>
         </a>
+
+        <a href="#" class="list-group-item list-group-item-primary flex-column align-items-start m-1 ">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">DAS IST EINE TODO</h5>
+            <div>
+                <button type="button" class="btn btn-primary">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+                    <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+                  </svg>
+                </button>
+                <button type="button" class="btn btn-success">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16">
+                    <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
+                  </svg>
+                </button>
+                <button type="button" class="btn btn-danger">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                    <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                  </svg>
+                </button>
+            </div>
+          </div>
+          <p class="mb-3">Beschreibt was man in der Todo machen soll.</p>
+          <small class="text-muted">Expires in 3 days</small>
+        </a>
+
         <a href="#" class="list-group-item list-group-item-primary flex-column align-items-start m-1 ">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">DAS IST EINE TODO</h5>
