--- a/Frontend/Sketches/App.html
+++ b/Frontend/Sketches/App.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="container">
-    <h1 class="text-center mt-2"><strong>MemoMe</strong></h1>
+    <h1 class="display-1 text-center mt-2">MemoMe</h1>
 
     <div class="row d-flex align-items-center justify-content-center">
         <div class="card m-2" style="width: 18rem;">
