--- a/Frontend/Sketches/Liste.html
+++ b/Frontend/Sketches/Liste.html
@@ -11,6 +11,13 @@
 <body>
   <div class="container">
     <h1 class="pb-1"><strong>LISTENNAME</strong></h1>
+
+    <div>
+      <div class="progress m-1" style="height: 25px;">
+        <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85% DONE</div>
+      </div>
+    </div>
+
     <div class="list-group">
         <a href="#" class="list-group-item list-group-item-primary flex-column align-items-start m-1">
           <div class="d-flex w-100 justify-content-between">
