--- a/Frontend/Sketches/Liste.html
+++ b/Frontend/Sketches/Liste.html
@@ -14,7 +14,7 @@
 
     <div>
       <div class="progress m-1" style="height: 25px;">
-        <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85% DONE</div>
+        <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75% DONE</div>
       </div>
     </div>
 
@@ -92,6 +92,26 @@
           </div>
           <p class="mb-3">Beschreibt was man in der Todo machen soll.</p>
           <small class="text-muted">Expires in 3 days</small>
+        </a>
+
+        <a href="#" class="list-group-item list-group-item-success flex-column align-items-start m-1 ">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">DAS IST EINE FERTIGE TODO</h5>
+            <div>
+                <button type="button" class="btn btn-success">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16">
+                    <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
+                  </svg>
+                </button>
+                <button type="button" class="btn btn-danger">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                    <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                  </svg>
+                </button>
+            </div>
+          </div>
+          <p class="mb-3">Beschreibt was man in der Todo machen soll.</p>
+          <small class="text-muted">DONE</small>
         </a>
     </div>
 
