--- a/Frontend/Sketches/App.html
+++ b/Frontend/Sketches/App.html
@@ -15,7 +15,7 @@
     <h1 class="display-1 text-center mt-2">MemoMe</h1>
 
     <div class="row d-flex align-items-center justify-content-center">
-        <div class="card m-2" style="width: 18rem;">
+        <div class="card m-2 shadow" style="width: 18rem;">
             <img class="card-img-top" src="https://www.spiesskuechenundwohnen.de/bilder/unser-kuechenstudio_1280x560.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Küche</h5>
@@ -44,7 +44,7 @@
             </div>
         </div>
     
-        <div class="card m-2" style="width: 18rem;">
+        <div class="card m-2 shadow" style="width: 18rem;">
           <img class="card-img-top" src="https://www.spiesskuechenundwohnen.de/bilder/unser-kuechenstudio_1280x560.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Küche</h5>
